syntax = "proto3";
package pj.sakuchin.percussion.proto;

import "proto/user.proto";

message SignupUserRequest {
    string token = 1;
}

message SignupUserResponse {
  User user = 1;
}